Cambio de configuracion del  montaje de init.sql moviéndolo a COPY en Dockerfile

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -4,4 +4,4 @@ ENV POSTGRES_USER=user
 ENV POSTGRES_PASSWORD=password
 ENV POSTGRES_DB=saasdb
 
-COPY init.sql /docker-entrypoint-initdb.d/
+COPY init.sql /docker-entrypoint-initdb.d/init.sql
