--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,15 +5,15 @@ services:
     build: ./database
     container_name: saas-db
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: saasdb
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-strongpassword123}
+      POSTGRES_DB: ${POSTGRES_DB:-saasdb}
     ports:
       - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U user -d saasdb"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-saasdb}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -24,7 +24,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      DATABASE_URL: "postgresql://user:password@database:5432/saasdb?schema=public"
+      DATABASE_URL: ${DATABASE_URL:-postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-strongpassword123}@database:5432/${POSTGRES_DB:-saasdb}?schema=public}
     depends_on:
       database:
         condition: service_healthy
@@ -33,9 +33,9 @@ services:
     build: ./frontend
     container_name: saas-frontend
     ports:
-      - "3001:3000"  # Next.js por defecto en 3000, mapeado a 3001 para evitar conflicto
+      - "3001:3000"  # Next.js por defecto en 3000, mapeado a 3001
     environment:
-      NEXT_PUBLIC_API_URL: "http://backend:3000"
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://backend:3000}
     depends_on:
       - backend
 
