--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-saasdb}"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d saasdb"]  # Hardcodea los defaults para evitar problemas
       interval: 10s
       timeout: 5s
       retries: 5
@@ -24,7 +24,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      DATABASE_URL: ${DATABASE_URL:-postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-strongpassword123}@database:5432/${POSTGRES_DB:-saasdb}?schema=public}
+      DATABASE_URL: ${DATABASE_URL:-postgresql://postgres:strongpassword123@database:5432/saasdb?schema=public}  # Default hardcoded, sin anidamiento
     depends_on:
       database:
         condition: service_healthy
@@ -33,7 +33,7 @@ services:
     build: ./frontend
     container_name: saas-frontend
     ports:
-      - "3001:3000"  # Next.js por defecto en 3000, mapeado a 3001
+      - "3001:3000"
     environment:
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://backend:3000}
     depends_on:
