--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,22 @@
 version: '3.8'
 
 services:
-  database:
-    build: ./database
-    container_name: saas-db
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-strongpassword123}
-      POSTGRES_DB: ${POSTGRES_DB:-saasdb}
-    ports:
-      - "5433:5432"
-    volumes:
-      - db-data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d saasdb"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+  #database:
+  #  build: ./database
+  #  container_name: saas-db
+  #  environment:
+  #    POSTGRES_USER: ${POSTGRES_USER:-postgres}
+  #    POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-strongpassword123}
+  #    POSTGRES_DB: ${POSTGRES_DB:-saasdb}
+  #  ports:
+  #    - "5433:5432"
+  #  volumes:
+  #    - db-data:/var/lib/postgresql/data
+  #  healthcheck:
+  #    test: ["CMD-SHELL", "pg_isready -U postgres -d saasdb"]
+  #    interval: 10s
+  #    timeout: 5s
+  #    retries: 5
 
   backend:
     build: ./backend
@@ -25,9 +25,9 @@ services:
       - "3000:3000"
     environment:
       DATABASE_URL: ${DATABASE_URL}  # Sin default; configúralo en Coolify UI
-    depends_on:
-      database:
-        condition: service_healthy
+  #  depends_on:
+  #    database:
+  #      condition: service_healthy
 
   frontend:
     build: ./frontend
