--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=MaGuJa2025!
 POSTGRES_DB=postgres
 DATABASE_URL=postgresql://postgres:MaGuJa2025!@129.213.152.35:5432/postgres?schema=public
+NEXT_PUBLIC_API_URL=http://back.maguja.uk
